--- a/compose_files/actualbudget/compose.yaml
+++ b/compose_files/actualbudget/compose.yaml
@@ -22,7 +22,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.actualbudget.rule=Host(`actualbudget.lab.local`)"
-      - "traefik.http.routers.actualbudget.tls=true"
+      #- "traefik.http.routers.actualbudget.tls=true"
       - "traefik.http.services.actualbudget.loadbalancer.server.port=5006"
       - "traefik.http.routers.actualbudget.entrypoints=websecure"
       #- "traefik.http.routers.actualbudget.service=actual_server"
