--- a/compose_files/jellyfin/compose.yaml
+++ b/compose_files/jellyfin/compose.yaml
@@ -64,7 +64,7 @@ services:
           - 'traefik.http.services.jellyfin-svc.loadBalancer.server.port=8096'
           - 'traefik.http.services.jellyfin-svc.loadBalancer.passHostHeader=true'
           ## Redirection of HTTP on port 9999 to HTTPS on port 9999 (consistent protocol)
-          - 'traefik.http.routers.jellyfin-insecure.entryPoints=secure'
+          - 'traefik.http.routers.jellyfin-insecure.entryPoints=websecure'
           - 'traefik.http.routers.jellyfin-insecure.rule=Host(`jellyfin.lab.local`)' # OPTIONAL: && PathPrefix(`/jellyfin`)
           - 'traefik.http.routers.jellyfin-insecure.middlewares=jellyfin-insecure-mw'
           - 'traefik.http.middlewares.jellyfin-insecure-mw.redirectscheme.scheme=https'
