--- a/compose_files/jellyfin/compose.yaml
+++ b/compose_files/jellyfin/compose.yaml
@@ -60,7 +60,7 @@ services:
           - "traefik.http.middlewares.jellyfin-mw.headers.customFrameOptionsValue='allow-from https://DOMAIN_NAME'"
           ## HTTP Service
           # We define the port here as a port is required, but note that the service is pointing to the service defined in @file
-          - 'traefik.http.routers.jellyfin.service=jellyfin-svc@file'
+          #- 'traefik.http.routers.jellyfin.service=jellyfin-svc@file'
           - 'traefik.http.services.jellyfin-svc.loadBalancer.server.port=8096'
           - 'traefik.http.services.jellyfin-svc.loadBalancer.passHostHeader=true'
           ## Redirection of HTTP on port 9999 to HTTPS on port 9999 (consistent protocol)
